[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Music and Sounds/Unpause.wav" type="AudioStream" id=2]
[ext_resource path="res://Music and Sounds/Pause.wav" type="AudioStream" id=3]
[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=5]
[ext_resource path="res://Menu/MenuSelectSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/DeathMenu.tscn" type="PackedScene" id=7]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMenu" parent="PauseOverlay" instance=ExtResource( 7 )]

[node name="Title2" type="Label" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/CenterContainer" index="0"]
pause_mode = 2
margin_left = 124.0
margin_right = 175.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/CenterContainer" index="1"]
visible = false

[node name="MarginContainer" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer" index="0"]
margin_right = 167.0

[node name="ColorRect" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer/MarginContainer" index="0"]
margin_right = 157.0

[node name="VBoxContainer" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer/MarginContainer/ColorRect/MarginContainer" index="0"]
margin_right = 142.0

[node name="PlayerStatTrackers" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer/MarginContainer/ColorRect/MarginContainer/VBoxContainer" index="0"]
margin_right = 137.0

[node name="MarginContainer2" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer" index="1"]
margin_left = 171.0

[node name="VBoxContainer" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2" index="0"]
margin_right = 99.0

[node name="Spacer" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2/VBoxContainer" index="0"]
margin_right = 69.0

[node name="ContinueButton" type="Button" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2/VBoxContainer" index="1"]
pause_mode = 2
margin_top = 18.0
margin_right = 69.0
margin_bottom = 38.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2/VBoxContainer" index="2"]
margin_top = 42.0
margin_right = 69.0
margin_bottom = 62.0

[node name="QuitButton" parent="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2/VBoxContainer" index="3"]
margin_top = 66.0
margin_right = 69.0
margin_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -40.0
margin_right = 35.5
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Label" parent="PauseOverlay/VBoxContainer"]
pause_mode = 2
visible = false
margin_right = 71.0
margin_bottom = 14.0

[node name="RestartButton" type="Button" parent="PauseOverlay/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 18.0
margin_right = 71.0
margin_bottom = 38.0
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseOverlay/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 42.0
margin_right = 71.0
margin_bottom = 62.0
text = "Quit"

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="UnpauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MenuSelectSound" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="PauseOverlay/DeathMenu/PauseOverlay/MarginContainer/VBoxContainer2/HBoxContainer/MarginContainer2/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="PauseOverlay/DeathMenu"]
